added slide settings enlarged product details fixed back button added option to jump to next tab

--- a/src/scss/admin.scss
+++ b/src/scss/admin.scss
@@ -250,6 +250,10 @@ input.hidden {
     padding: 10px;
     color: white;
     border: 5px solid white;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 .mi-body {
     padding: 10px;
@@ -268,6 +272,9 @@ input.hidden {
         display: flex;
         align-items: center;
         justify-content: space-between;
+    }
+    .material-icons {
+        font-size: 22px;
     }
 }
 .mi-btn {
