--- a/views/admin.pug
+++ b/views/admin.pug
@@ -4,6 +4,7 @@ block links
   link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.8.0/css/pikaday.min.css')
 
 block scripts
+  script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.13/jquery.mousewheel.min.js')
   script(src='https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.8.0/pikaday.min.js')
   script(src='https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js')
   script(src='https://cdnjs.cloudflare.com/ajax/libs/blueimp-file-upload/10.0.0/js/vendor/jquery.ui.widget.min.js')
