--- a/src/scss/admin.scss
+++ b/src/scss/admin.scss
@@ -142,11 +142,14 @@ span.match {
 .sr-ean, .sr-price, .sr-number, .sr-order, .sr-products {
     text-align: right;
 }
-.sr-group, .sr-vat, .sr-edit {
+.sr-vat, .sr-edit {
     text-align: center;
 }
-.sr-name, .sr-img {
+.sr-name, .sr-img, .sr-number {
     cursor: pointer;
+}
+.sr-name:hover, .sr-number:hover {
+    text-decoration: underline;
 }
 .navbar .btn-group {
     margin: 0;
@@ -173,6 +176,28 @@ form {
 }
 .form-row > * {
     flex-grow: 1;
+}
+.form-row.product-mods {
+    flex-direction: column;
+}
+.product-mod {
+    padding-right: 5px;
+    padding-left: 5px;
+    font-size: 0.675rem;
+    cursor: pointer;
+    max-width: 120px;
+    min-width: 100px;
+    border-radius: 20px;
+    white-space: initial;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: background-color;
+    margin-bottom: 5px;
+    margin-right: 2px;
+}
+.product-mod:hover {
+    background-color: $themeColorDarker;
 }
 [class^=bmd-label] {
     color: #434343;
@@ -203,6 +228,11 @@ form {
 }
 input.hidden {
     display: none;
+}
+.horizontal-scroll {
+    overflow: auto;
+    flex-wrap: wrap;
+    display: flex;
 }
 .mod-item {
     input, select {
