--- a/src/scss/admin.scss
+++ b/src/scss/admin.scss
@@ -177,6 +177,9 @@ form {
 .form-row > * {
     flex-grow: 1;
 }
+.payment-method-toggle {
+    width: 200px;
+}
 .form-row.product-mods {
     flex-direction: column;
 }
