--- a/src/scss/products.scss
+++ b/src/scss/products.scss
@@ -46,7 +46,7 @@
     justify-content: space-around;
 }
 .product-details .order {
-    min-width: 120px;
+    width: 350px;
 }
 .cart-quantity-indicator {
     font-size: 1.25em;
@@ -110,6 +110,11 @@
         padding: 20px 40px;
     }
 }
+.pd-info {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
 .pd-description {
     width: 100%;
     font-size: 15px;
@@ -133,6 +138,7 @@
     min-width: initial;
     max-width: initial;
     height: 64px;
+    border-radius: 32px;
 }
 .pd-name {
     text-transform: uppercase;
@@ -148,9 +154,11 @@
 .pd-row {
     display: flex;
     text-align: right;
+    width: 350px;
 }
 .pd-control {
-    align-items: center;
+    flex-direction: column;
+    align-items: flex-end;
     justify-content: space-between;
 }
 .pd-control .btn {
