fixed pd description

--- a/src/scss/products.scss
+++ b/src/scss/products.scss
@@ -122,6 +122,7 @@
     background-color: transparent;
     font-style: italic;
     resize: none;
+    overflow: hidden;
 }
 .pd-img {
     height: 420px;
