added pictures to product mods added theme color selection added field label for image uploaders parametrized kiosk name and company name

--- a/src/scss/auth.scss
+++ b/src/scss/auth.scss
@@ -21,10 +21,10 @@
     margin: 0 auto;
 }
 .form-signin {
-    color: $themeColor;
+    color: $primaryThemeColor;
 }
 .form-signin input {
-    color: $themeColor;
+    color: $primaryThemeColor;
     padding: 10px;
 }
 .form-signin.full-width {
