--- a/src/scss/cart.scss
+++ b/src/scss/cart.scss
@@ -11,7 +11,7 @@
 #items-count {
     min-width: 110px;
     font-weight: 500;
-    color: $themeColor;
+    color: $primaryThemeColor;
 }
 .cart-items {
     min-height: 160px;
