--- a/src/scss/admin.scss
+++ b/src/scss/admin.scss
@@ -29,7 +29,7 @@
     }
 }
 #cp-header {
-    color: $themeColor;
+    color: $primaryThemeColor;
     justify-content: space-between;
     align-items: center;
     border-bottom: none;
@@ -43,7 +43,6 @@
     overflow: auto;
     scroll-padding: 50px 0 0 50px;
     height: 100%;
-    background-color: #00332d;
     .btn {
         margin: 0;
     }
@@ -59,7 +58,7 @@
         align-items: center;
     }
     input {
-        color: $themeColor;
+        color: $primaryThemeColor;
         width: 100px;
         text-align: center;
     }
@@ -109,7 +108,7 @@
     border-left: 2px solid transparent;
 }
 .transaction-item:hover .ti-number {
-    border-left: 2px solid $themeColor;
+    border-left: 2px solid $primaryThemeColor;
 }
 .ti-number {
     font-weight: bold;
@@ -125,14 +124,14 @@
     text-align: center;
 }
 .ti-number {
-    color: $themeColor;
+    color: $primaryThemeColor;
 }
 .receipt-preview {
     margin: 0 auto;
     width: fit-content;
 }
 span.match {
-    color: $themeColor;
+    color: $primaryThemeColor;
     font-weight: bold;
 }
 .sr-img {
@@ -190,7 +189,7 @@ form {
     cursor: pointer;
     width: calc(20% - 2px);
     min-width: 100px;
-    border-radius: 20px;
+    /* border-radius: 20px; */
     white-space: initial;
     display: flex;
     justify-content: center;
@@ -200,7 +199,7 @@ form {
     margin-right: 2px;
 }
 .product-mod:hover {
-    background-color: $themeColorDarker;
+    background-color: $primaryThemeColorDarker;
 }
 [class^=bmd-label] {
     color: #434343;
@@ -212,11 +211,11 @@ form {
     position: relative;
     max-width: 300px;
     cursor: pointer;
-    padding-right: 20px;
+    margin: 0 10px;
     min-height: 120px;
     .img-holder {
         width: 100%;
-        height: 100%;
+        height: 90%;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -239,7 +238,7 @@ input.hidden {
 }
 .mod-item {
     input, select {
-        color: $themeColor;
+        color: $primaryThemeColor;
         font-weight: 700;
         padding: 7px 5px;
     }/*
@@ -253,7 +252,7 @@ input.hidden {
     }
     input:focus {
         background-color: #eee;
-        border-bottom: 1px solid $themeColor;
+        border-bottom: 1px solid $primaryThemeColor;
     }*/
     .form-row {
         margin-right: 0;
@@ -278,7 +277,7 @@ input.hidden {
 .mi-header {
     font-weight: bold;
     font-size: 14px;
-    background-color: #009688;
+    background-color: $primaryThemeColor;
     text-transform: uppercase;
     padding: 10px;
     color: white;
