--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -171,10 +171,10 @@ footer .card-header {
     width: 50px;
     height: 50px;
     margin: 0;
-    border: 5px solid $themeColor;
+    border: 5px solid $primaryThemeColor;
     border-radius: 50%;
     animation: spinner-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
-    border-color: $themeColor transparent transparent transparent;
+    border-color: $primaryThemeColor transparent transparent transparent;
 }
 .spinner-ring div:nth-child(1) { animation-delay: -0.45s; }
 .spinner-ring div:nth-child(2) { animation-delay: -0.3s; }
@@ -190,7 +190,7 @@ footer .card-header {
     position: absolute;
     top: calc(50% - 32px);
     left: calc(50% - 32px);
-    color: #009688;
+    color: $primaryThemeColor;
     font-weight: bold;
     z-index: 1051;
 }
@@ -217,6 +217,12 @@ footer .card-header {
         height: 20px;
         width: 30px;
     }
+}
+#header .locale-button {
+    color: white;
+}
+#header .dropdown-menu .locale-button {
+    color: initial;
 }
 .locale-en { background-image: url(https://lipis.github.io/flag-icon-css/flags/4x3/gb.svg) }
 .locale-cs { background-image: url(https://lipis.github.io/flag-icon-css/flags/4x3/cz.svg) }
