--- a/src/scss/products.scss
+++ b/src/scss/products.scss
@@ -90,7 +90,7 @@
 .po-price {
     font-weight: 500;
     font-size: 1.25em;
-    color: $themeColor;
+    color: $primaryThemeColor;
 }
 .po-row {
     width: 100%;
@@ -136,15 +136,38 @@
 .pd-mod label {
     font-size: 16px;
 }
-.pd-mod .product-mod {
-    font-size: 16px;
-    padding: 10px;
-    width: calc(25% - 2px);
-    min-width: initial;
-    max-width: initial;
-    height: 84px;
-    border-radius: 42px;
-    justify-content: space-around;
+.pd-mod {
+    .product-mod-wrapper {
+        margin: 0 2px;
+        width: calc(25% - 4px);
+    } 
+    .product-mod {
+        font-size: 16px;
+        width: 100%;
+        padding: 10px;
+    }
+}
+.pd-mod .pm-img {
+    cursor: pointer;
+    height: 80px;
+    position: relative;
+    i {
+        top: 5px;
+        right: 5px;
+        position: absolute;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: white;
+        border-radius: 50%;
+    }
+    span {
+        padding: 5px;
+        position: absolute;
+        width: 100%;
+        background-color: $primaryThemeColorTransparent;
+        color: white;
+    }
 }
 .pd-name {
     text-transform: uppercase;
@@ -154,7 +177,7 @@
 .pd-price {
     font-size: 32px;
     font-weight: bold;
-    color: $themeColor;
+    color: $primaryThemeColor;
     text-align: right;
 }
 .pd-row {
