--- a/src/scss/tabs.scss
+++ b/src/scss/tabs.scss
@@ -29,7 +29,7 @@
 }
 .tab-name {
     opacity: 0;
-    background-color: $themeColor;
+    background-color: $primaryThemeColor;
     color: white;
     width: 100%;
     bottom: 0;
