--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -163,6 +163,9 @@ footer .card-header {
     height: 64px;
     align-items: center;
     justify-content: center;
+    background-color: white;
+    border-radius: 50%;
+    box-shadow: 0 4px 5px 0 rgba(0,0,0,.14), 0 1px 10px 0 rgba(0,0,0,.12), 0 2px 4px -1px rgba(0,0,0,.2);
 }
 .spinner-ring div {
     box-sizing: border-box;
