--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -2,4 +2,5 @@ $backgroundColor: white;
 $primaryThemeColor: var(--primary);
 $primaryThemeColorDarker: var(--primary-darker);
 $primaryThemeColorTransparent: var(--primary-transparent);
+$primaryThemeColorDarkerTransparent: var(--primary-darker-transparent);
 $borderRadius: 5px;
