--- a/src/themes/bootstrap-material-design.css
+++ b/src/themes/bootstrap-material-design.css
@@ -26,6 +26,7 @@
     --primary: #009688;
     --primary-darker: #008276;
     --primary-transparent: #00827583;
+    --primary-darker-transparent: #065e55be;
     --secondary: #6c757d;
     --success: #4caf50;
     --info: #03a9f4;
