added option to make group not displayed fixed slide image resizing product with mods are added to cart as separated items products without mods are added to carts as increment fixed takeout cart item added pay at checkout text on receipts with cash payment method removed cart quantity indicators

--- a/src/scss/admin.scss
+++ b/src/scss/admin.scss
@@ -141,8 +141,11 @@ span.match {
 .sr-ean, .sr-price, .sr-number, .sr-order, .sr-products {
     text-align: right;
 }
-.sr-vat, .sr-edit {
+.sr-vat, .sr-edit, .sr-display {
     text-align: center;
+}
+.sr-display, .sr-products, .sr-order, .sr-number {
+    width: 80px;
 }
 .sr-name, .sr-img, .sr-number {
     cursor: pointer;
