--- a/src/scss/products.scss
+++ b/src/scss/products.scss
@@ -44,6 +44,20 @@
     align-items: center;
     justify-content: space-around;
 }
+.po-ribbon {
+    position: absolute;
+    right: 5px;
+    top: 5px;
+    background-color: rgba(255, 255, 255, 0.5);
+    height: 30px;
+    width: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    font-weight: bold;
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0 rgba(0,0,0,.12);
+}
 .product-details .order {
     width: 330px;
 }
