--- a/views/layout.pug
+++ b/views/layout.pug
@@ -11,7 +11,7 @@ html(lang='en')
     link(rel='stylesheet', href='/css/styles.min.css')
     link(rel='icon', href= icon)
     block links
-    script(src='https://code.jquery.com/jquery-3.2.1.min.js')
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery.qrcode/1.0/jquery.qrcode.min.js')
     script(src='https://unpkg.com/popper.js@1.12.6/dist/umd/popper.js')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/arrive/2.4.1/arrive.min.js')
