added labelPrinter using multilocale for admin

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -227,13 +227,13 @@ footer .card-header {
 #header .dropdown-menu .locale-button {
     color: initial;
 }
-.locale-en { background-image: url(https://lipis.github.io/flag-icon-css/flags/4x3/gb.svg) }
-.locale-cs { background-image: url(https://lipis.github.io/flag-icon-css/flags/4x3/cz.svg) }
-.locale-sk { background-image: url(https://lipis.github.io/flag-icon-css/flags/4x3/sk.svg) }
-.locale-vi { background-image: url(https://lipis.github.io/flag-icon-css/flags/4x3/vn.svg) }
-.locale-ko { background-image: url(https://lipis.github.io/flag-icon-css/flags/4x3/kp.svg) }
-.locale-ja { background-image: url(https://lipis.github.io/flag-icon-css/flags/4x3/jp.svg) }
-.locale-de { background-image: url(https://lipis.github.io/flag-icon-css/flags/4x3/de.svg) }
+.locale-en { background-image: url(https://res.cloudinary.com/itakecz/image/upload/v1640968213/gb_dcnpfg.svg) }
+.locale-cs { background-image: url(https://res.cloudinary.com/itakecz/image/upload/v1640968379/cz_adl6g7.svg) }
+.locale-sk { background-image: url(https://res.cloudinary.com/itakecz/image/upload/v1640968379/sk_agl79h.svg) }
+.locale-vi { background-image: url(https://res.cloudinary.com/itakecz/image/upload/v1640968379/vn_j6hdlo.svg) }
+.locale-ko { background-image: url(https://res.cloudinary.com/itakecz/image/upload/v1640968379/kp_s3nrbo.svg) }
+.locale-ja { background-image: url(https://res.cloudinary.com/itakecz/image/upload/v1640968379/jp_mnxozi.svg) }
+.locale-de { background-image: url(https://res.cloudinary.com/itakecz/image/upload/v1640968379/de_zalp49.svg) }
 i.icon {
     display: block;
     margin: 0 auto;
