fixed video tag upload

--- a/src/scss/admin.scss
+++ b/src/scss/admin.scss
@@ -247,6 +247,9 @@ form {
         font-size: 80px;
     }
 }
+video.img-holder {
+    width: 100%;
+}
 .control-panel .card-body {
   padding: 0 1.25rem;
 }
