--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -120,6 +120,9 @@ main {
         height: 2px;
         bottom: 0;
     }
+    video {
+        width: 100%;
+    }
 }
 footer .nav-item:last-child {
     margin-left: auto;
