added offline lib prevent next screen when offline

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,12 +5,15 @@ html(lang='en')
     meta(http-equiv='X-UA-Compatible', content='ie=edge')
     meta(name='viewport', content='width=device-width, user-scalable=no')
     title= title
+    link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/offline-js/0.7.19/themes/offline-theme-slide.min.css')
+    link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/offline-js/0.7.19/themes/offline-language-english.min.css')
     link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/material-design-icons/3.0.1/iconfont/material-icons.min.css')
     link(rel='stylesheet', id="theme" href= theme)
     link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,700|Material+Icons')
     link(rel='stylesheet', href='/css/styles.min.css')
     link(rel='icon', href= icon)
     block links
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/offline-js/0.7.19/offline.min.js')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery.qrcode/1.0/jquery.qrcode.min.js')
     script(src='https://unpkg.com/popper.js@1.12.6/dist/umd/popper.js')
