--- a/src/scss/admin.scss
+++ b/src/scss/admin.scss
@@ -235,6 +235,7 @@ form {
     cursor: pointer;
     margin: 0 10px;
     min-height: 120px;
+    max-height: 150px;
     .img-holder {
         width: 100%;
         height: 90%;
@@ -252,6 +253,16 @@ video.img-holder {
 }
 .control-panel .card-body {
   padding: 0 1.25rem;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  flex: 0;
+  .card-header {
+    width: 100%;
+  }
+  & > div, & > form {
+    flex-grow: 1;
+  }
 }
 input.hidden {
     display: none;
