--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -245,3 +245,36 @@ i.icon {
 .btn-toggle.btn-secondary {
     background-color: #e1e1e1;
 }
+
+.table-marker {
+    align-items: center;
+    height: 100%;
+    justify-content: center;
+    font-size: 160px;
+}
+.keyboard {
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+    max-width: 720px;
+    padding: 20px;
+}
+.keyboard button {
+    width: calc(100% / 3);
+    height: 100px;
+    font-size: 32px;
+}
+// .keyboard button[data-key="o"] {
+//     border-radius: 50%;
+// }
+.table-marker-text {
+    line-height: 180px;
+    background-color: rgba(255, 255, 255, 0.8);
+    width: 100%;
+    text-align: center;
+}
+#skip-table-marker {
+    height: 100px;
+    width: 200px;
+    font-size: 24px;
+}
