--- a/src/scss/products.scss
+++ b/src/scss/products.scss
@@ -58,6 +58,10 @@
     font-weight: bold;
     box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0 rgba(0,0,0,.12);
 }
+.po-ribbon.mandatory {
+    background-color: rgb(250, 76, 6);
+    color: white;
+}
 .product-details .order {
     width: 330px;
 }
