--- a/src/scss/tabs.scss
+++ b/src/scss/tabs.scss
@@ -12,7 +12,7 @@
     width: 100px;
     height: 100px;
     margin-bottom: 20px;
-    opacity: 0.5;
+    /* opacity: 0.5; */
     padding: 0;
     background-color: white !important;
 }
