--- a/src/scss/tabs.scss
+++ b/src/scss/tabs.scss
@@ -29,19 +29,19 @@
     background-size: cover;
 }
 .tab-name {
-    opacity: 0.5;
-    background-color: $primaryThemeColorDarkerTransparent;
+    background-color: #686868be;
     color: white;
     width: 100%;
     bottom: 0;
     position: absolute;
-    transition: opacity ease .3s;
+    transition: opacity ease .3s, background-color ease .3s;
     padding: 5px 0;
 }
 .tab.selected {
     opacity: 1;
     .tab-name {
         opacity: 1;
+        background-color: $primaryThemeColorDarkerTransparent;
     }
 }
 .tab-overlay {
