added gokasa settings

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -21,6 +21,7 @@ html(lang='en')
     script(src='https://unpkg.com/bootstrap-material-design@4.1.1/dist/js/bootstrap-material-design.js')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/locale/cs.js')
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.0/socket.io.slim.js')
     block scripts
   body
     block content
