--- a/src/scss/products.scss
+++ b/src/scss/products.scss
@@ -14,6 +14,11 @@
         width: 100%;
     }
 }
+.products-description {
+    grid-column: 1/-1;
+    text-align: center;
+    text-transform: initial;
+}
 .products-header {
     align-items: center;
     justify-content: space-between;
