add option to select label printer print style changed printer settings layout

--- a/src/scss/admin.scss
+++ b/src/scss/admin.scss
@@ -314,6 +314,10 @@ input.hidden {
         position: initial;
     }*/
 }
+.mod-item.card .card {
+    margin-bottom: 10px;
+    padding: 10px;
+}
 .mi-header {
     font-weight: bold;
     font-size: 14px;
