--- a/views/layout.pug
+++ b/views/layout.pug
@@ -13,6 +13,7 @@ html(lang='en')
     link(rel='stylesheet', href='/css/styles.min.css')
     link(rel='icon', href= icon)
     block links
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/axios/0.27.2/axios.min.js')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/offline-js/0.7.19/offline.min.js')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery.qrcode/1.0/jquery.qrcode.min.js')
@@ -21,7 +22,6 @@ html(lang='en')
     script(src='https://unpkg.com/bootstrap-material-design@4.1.1/dist/js/bootstrap-material-design.js')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/locale/cs.js')
-    script(src='https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.0/socket.io.slim.js')
     block scripts
   body
     block content
