added style options for printer and kitchen printer added order prefix setting updated some translations added some tips

--- a/src/scss/admin.scss
+++ b/src/scss/admin.scss
@@ -125,7 +125,7 @@
 .ti-order {
     font-weight: bold;
 }
-.ti-order, .ti-total {
+.ti-total {
     text-align: right;
 }
 .ti-print, .ti-payment, .ti-delivery {
