fixed receipt preview

--- a/src/scss/admin.scss
+++ b/src/scss/admin.scss
@@ -142,6 +142,7 @@
 .receipt-preview {
     margin: 0 auto;
     width: fit-content;
+    line-height: 14px;
 }
 span.match {
     color: $primaryThemeColor;
