fixed receipt browser print

--- a/src/scss/admin.scss
+++ b/src/scss/admin.scss
@@ -143,6 +143,8 @@
     margin: 0 auto;
     width: fit-content;
     line-height: 12px;
+    font-weight: bold;
+    color: #000;
 }
 span.match {
     color: $primaryThemeColor;
