--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -33,6 +33,9 @@ html, body, #app {
     display: flex;
     flex-direction: column;
 }
+.modal-fullscreen {
+    max-width: none !important;
+}
 .nav-item {
     position: relative;
     .material-icons {
