added auto login kiosk

--- a/src/scss/auth.scss
+++ b/src/scss/auth.scss
@@ -33,3 +33,6 @@
 .form-signin .input-group-prepend {
     max-width: 60px;
 }
+.form-signin input:disabled {
+    color: $primaryThemeColor !important;
+}
