added unavailable product option

--- a/src/scss/admin.scss
+++ b/src/scss/admin.scss
@@ -190,7 +190,7 @@ span.match {
 .sr-vat, .sr-active {
     width: 60px;
 }
-.sr-vat, .sr-edit, .sr-display, .sr-active {
+.sr-vat, .sr-edit, .sr-display, .sr-active, .sr-available {
     text-align: center;
 }
 .sr-display, .sr-products, .sr-order, .sr-position, .sr-number, .sr-limit {
