--- a/src/scss/products.scss
+++ b/src/scss/products.scss
@@ -117,6 +117,11 @@
     align-items: center;
     justify-content: space-between;
 }
+.po-name .badge {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
 .po-price {
     font-weight: 500;
     font-size: 1.25em;
@@ -141,7 +146,9 @@
     }
 }
 .product-details.unavailable {
-    filter: grayscale(1);
+    .pd-img, .pd-mod, .pd-control, .pd-price {
+        filter: grayscale(1);
+    }
 }
 .pd-info {
     display: flex;
@@ -239,6 +246,11 @@
     text-transform: uppercase;
     font-weight: bold;
     font-size: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.pd-name .badge {
     display: flex;
     align-items: center;
     justify-content: space-between;
