fixed pm-mod quantity for mandatory type, changed product details layout

--- a/src/scss/admin.scss
+++ b/src/scss/admin.scss
@@ -354,6 +354,7 @@ input.hidden {
 }
 .mi-body {
     padding: 10px;
+    flex-grow: 1;
     .bmd-form-group {
         margin: 0 10px;
         display: flex;
