--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,7 +5,7 @@
     background-position: center;
     background-size: cover;
 }
-::-webkit-scrollbar {
+*:not(.pd-mod)::-webkit-scrollbar {
     display: none;
 }
 body {
