added promotion ribbon added ribbon to tabs

--- a/src/scss/mediaqueries.scss
+++ b/src/scss/mediaqueries.scss
@@ -72,6 +72,14 @@
         width: 180px;
         height: 180px;
     }
+    .tab.selected .ribbon-wrapper {
+        .ribbon-front {
+            width: 200px;
+        }
+        .ribbon-edge-bottomright {
+            left: 180px;
+        }
+    }
     .product-offer {
         height: 340px;
     }
